tried to fix expanded menu on mobile

--- a/css/basic.less
+++ b/css/basic.less
@@ -16,6 +16,8 @@ html,body {
     height: 100%;
 }
 body {
+    width: 100%; // make sure that menu shown doesn't add horz scroll bars
+    overflow: hidden;  // make sure that menu shown doesn't add horz scroll bars
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
 }
